WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282301
Crash WebCore::MediaSource::monitorSourceBuffers
https://bugs.webkit.org/show_bug.cgi?id=282301
Summary
Crash WebCore::MediaSource::monitorSourceBuffers
Jean-Yves Avenard [:jya]
Reported
2024-10-29 16:44:16 PDT
null deref in ``` 31 WebCore::MediaSource::monitorSourceBuffers() (WebCore) <== 29 WebCore::HTMLMediaElement::playbackProgressTimerFired() (WebCore) | 29 WebCore::ThreadTimers::sharedTimerFiredInternal() (WebCore) | 29 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const (WebCore) ```
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2024-10-29 16:44:37 PDT
rdar://138799098
Jean-Yves Avenard [:jya]
Comment 2
2024-10-29 16:47:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35916
EWS
Comment 3
2024-10-29 18:36:40 PDT
Committed
285873@main
(e36a932241b8): <
https://commits.webkit.org/285873@main
> Reviewed commits have been landed. Closing PR #35916 and removing active labels.
EWS
Comment 4
2024-10-31 09:16:29 PDT
Committed
283286.394@safari-7620-branch
(7923df83f818): <
https://commits.webkit.org/283286.394@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2165 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug