Cherry-pick 285873@main (e36a932241b8). https://bugs.webkit.org/show_bug.cgi?id=282301

Crash WebCore::MediaSource::monitorSourceBuffers
    https://bugs.webkit.org/show_bug.cgi?id=282301
    rdar://138799098

    Reviewed by Eric Carlson.

    Return early if the MediaSource hasn't been attached to its MediaSourcePrivate and is still closed.

    * Source/WebCore/Modules/mediasource/MediaSource.cpp:
    (WebCore::MediaSource::monitorSourceBuffers):

    Canonical link: https://commits.webkit.org/285873@main

Canonical link: https://commits.webkit.org/282416.265@webkitglib/2.46